# based_scrapper

./: Cargo.toml  README.md
src/: allianz.rs  auchan.rs  autonom.rs  bcr.rs  brd.rs  decathlon.rs  draexlmaier.rs  enel.rs  eon.rs  fedex.rs  generali.rs  hm.rs  kaufland.rs  linde.rs  main.rs  medicover.rs  samsung.rs  template_get.rs  template_post.rs  vodafone.rs  zentiva.rs
