[package]
name = "based_scrapper"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.6", features = ["blocking", "serde_json", "json", "gzip"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.18"
html5ever = "0.26.0"
select = "0.5.0"
scraper = "0.12"
regex = "1.5"
unidecode = "0.3.0"
anyhow = "1.0"
titlecase = "2.2.1"
twox-hash = "1.6.1"
colored = "2.0"
indicatif = "0.16.2"
